--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,9 +1,9 @@
 :root {
   --background: #1d1d1d;
   --text: #e2f1e7;
-  --primary: #629584;
+  --primary: #387478;
   --secondary: #243642;
-  --accent: #387478;
+  --accent: #629584;
 }
 
 * {
@@ -26,7 +26,7 @@ main {
   align-items: center;
   justify-content: start;
   gap: 32px;
-  margin: 64px 128px;
+  min-height: calc(100dvh - 80px);
 }
 
 table {
@@ -43,7 +43,72 @@ th {
 }
 
 td {
-  background: var(--background);
+  background-color: var(--background);
   padding: 16px 32px;
   border: var(--text) solid 2px;
+}
+
+header {
+  background-color: var(--primary);
+  position: sticky;
+  top: 0px;
+  z-index: 50;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  padding: 16px 64px;
+}
+
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+nav ul {
+  display: flex;
+  list-style: none;
+  gap: 32px;
+}
+
+input {
+  background-color: var(--text);
+  color: var(--background);
+  font-family: inherit;
+  font-size: 1rem;
+  font-weight: 700;
+  letter-spacing: 1px;
+  padding: 8px 16px;
+  border: none;
+  border-radius: 4px;
+}
+
+/* input active */
+input:focus {
+  outline: none;
+  box-shadow: 0 0 0 2px var(--accent);
+}
+
+input[type="file"] {
+  display: none;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  width: 100%;
+  max-width: 520px;
+  align-self: center;
+  justify-self: center;
+  background: var(--primary);
+  padding: 32px;
+  border-radius: 8px;
+  box-shadow:
+    rgba(56, 116, 120, 0.5) -8px 8px,
+    rgba(56, 116, 120, 0.4) -16px 16px,
+    rgba(255, 255, 255, 0.3) 8px 0px 12px,
+    rgba(255, 255, 255, 0.22) 0px -8px 38px;
 }
